# endfield-essence-recognizer

./: .env  README.md  main.spec  pyproject.toml
.github/workflows/: build-and-release.yml
frontend-vuetify/: index.html  package-lock.json  package.json
frontend-vuetify/src/: App.vue  main.ts
frontend-vuetify/src/components/: ItemIcon.vue
frontend-vuetify/src/components/icons/: logo.vue
frontend-vuetify/src/composables/: useLanguage.ts  useLogs.ts
frontend-vuetify/src/pages/: docs.vue  friend-links.vue  logs.vue  monitor.vue  settings.vue  yituliu.vue
frontend-vuetify/src/router/: index.ts
frontend-vuetify/src/styles/: global.scss  settings.scss
frontend-vuetify/src/types/endfielddata/TableCfg/: RarityColorTable.ts
frontend-vuetify/src/utils/: autoFontSizing.ts
frontend-vuetify/src/utils/gameData/: gameData.ts  item.ts  weapon.ts
ocr/: main.py
openspec/changes/archive/2026-01-31-2026-01-31-add-scan-abort-on-failure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-31-2026-01-31-add-scan-abort-on-failure/specs/scan-abort/: spec.md
openspec/changes/archive/2026-01-31-2026-01-31-add-scan-summary/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-31-2026-01-31-add-scan-summary/specs/scan-summary/: spec.md
openspec/specs/scan-abort/: spec.md
openspec/specs/scan-summary/: spec.md
scripts/: generate_templates.py
src/endfield_essence_recognizer/: __init__.py  __main__.py  auto_control.py  capture.py  config.py  essence_scanner.py  image.py  log.py  main.py  main_win32.py  path.py  recognizer.py  screenshot.py  server.py  version.py  webui.py  window.py
src/endfield_essence_recognizer/data/: weapons.json
src/endfield_essence_recognizer/game_data/: __init__.py  item.py  weapon.py
src/endfield_essence_recognizer/game_data/models/: __init__.py  common.py
src/endfield_essence_recognizer/game_data/models/endfielddata/TableCfg/: GemTable.py  GemTagIdTable.py  I18nTextTable.py  ItemTable.py  ItemTypeTable.py  RarityColorTable.py  SkillPatchTable.py  TextTable.py  WeaponBasicTable.py  WikiEntryDataTable.py  (+2 more)
