[project]
name = "endfield-essence-recognizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "loguru>=0.7.3",
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]

[project.scripts]
eer = "endfield_essence_recognizer.auto_control:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
